--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+  font-family: franklin gothic medium, sans-serif;
+}
+/* Application-wide Styles */
+h1 {
+ color: #369;
+ font-family: franklin gothic medium, sans-serif;
+ font-size: 250%;
+}
+h2, h3 {
+ color: #444;
+ font-family: franklin gothic medium, sans-serif;
+ font-weight: lighter;
+}
+body {
+ margin: 2em;
+}
+body, input[text], button {
+ color: #888;
+ font-family: franklin gothic medium, sans-serif;
+}
+/* everywhere else */
